# Cpp_SDL2_Tutorial

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
00_Intro/: CMakeLists.txt  main.cpp
01_Surface/: CMakeLists.txt  main.cpp
02_RenderDraw/: CMakeLists.txt  main.cpp
03_Texture/: CMakeLists.txt  main.cpp
04_ColorKey/: CMakeLists.txt  main.cpp
05_Blending/: CMakeLists.txt  main.cpp
06_ScrollingBlending/: CMakeLists.txt  main.cpp
07_Fonts/: CMakeLists.txt  main.cpp
08_Images/: CMakeLists.txt  main.cpp
09_TextureClassAbstraction/: CMakeLists.txt  ResourceManager.cpp  TextureRectangle.cpp  TextureRectangle.h  main.cpp
10_SpriteAnimation/: AnimatedSprite.cpp  AnimatedSprite.hpp  CMakeLists.txt  TextureRectangle.cpp  TextureRectangle.h  main.cpp
11_RectCollision/: AnimatedSprite.cpp  CMakeLists.txt  TextureRectangle.cpp  TextureRectangle.h  main.cpp
12_SDLAppAbstraction/: CMakeLists.txt  SDLApp.hpp  main.cpp
13_GameObject/: CMakeLists.txt  GameObject.cpp  GameObject.hpp  SDLApp.cpp  SDLApp.hpp  TextureRectangle.cpp  TextureRectangle.h  main.cpp
14_CollisionComponent/: CMakeLists.txt  Collider2D.cpp  Collider2D.hpp  GameObject.cpp  GameObject.hpp  SDLApp.cpp  SDLApp.hpp  TextureRectangle.cpp  TextureRectangle.h  main.cpp
15_Audio/: CMakeLists.txt  ResourceManager.h  SDLApp.cpp  SDLApp.hpp  main.cpp
16_FontClassAbstraction/: CMakeLists.txt  DynamicText.cpp  DynamicText.hpp  GameObject.hpp  ResourceManager.cpp  SDLApp.cpp  SDLApp.hpp  main.cpp
17_Pong/: AnimatedSprite.hpp  CMakeLists.txt  Collider2D.cpp  Collider2D.hpp  DynamicText.cpp  SDLApp.cpp  SDLApp.hpp  TextureRectangle.h  main.cpp
18_Mixer/: CMakeLists.txt  DynamicText.hpp  GameObject.cpp  Music.cpp  Music.hpp  SDLApp.cpp  SDLApp.hpp  Sound.cpp  TextureRectangle.cpp  main.cpp
19_Timer/: CMakeLists.txt  SDLApp.cpp  SDLApp.hpp  Sound.hpp  main.cpp
20_RotateTexture/: CMakeLists.txt  main.cpp
extras/glad/include/glad/: gl.h  glad.h
extras/glad/src/: glad.c
sdl2tutorial/: CMakeLists.txt
sdl2tutorial/include/sdl2tutorial/: Collider2D.hpp  DynamicText.hpp  GameObject.hpp  Music.hpp  ResourceManager.h  SDL2Tutorial.hpp  SDLApp.hpp  Sound.hpp  TextureRectangle.h
sdl2tutorial/src/: AnimatedSprite.cpp  Collider2D.cpp  DynamicText.cpp  GameObject.cpp  Music.cpp  ResourceManager.cpp  SDLApp.cpp  Sound.cpp  TextureRectangle.cpp
