cmake_minimum_required(VERSION 3.21)
project(SDL2_Tutorial)

include(GNUInstallDirs)

find_package(sdlcpp REQUIRED)
find_package(SDL2pp REQUIRED)

add_subdirectory(00_Intro)
add_subdirectory(01_Surface)
add_subdirectory(02_RenderDraw)
add_subdirectory(03_Texture)
add_subdirectory(04_ColorKey)
add_subdirectory(05_Blending)
add_subdirectory(06_ScrollingBlending)
add_subdirectory(07_Fonts)
add_subdirectory(08_Images)
add_subdirectory(09_TextureClassAbstraction)
add_subdirectory(10_SpriteAnimation)
add_subdirectory(11_RectCollision)
add_subdirectory(12_SDLAppAbstraction)
add_subdirectory(13_GameObject)
add_subdirectory(14_CollisionComponent)
add_subdirectory(15_Audio)
add_subdirectory(16_FontClassAbstraction)
add_subdirectory(17_Pong)
add_subdirectory(18_Mixer)
add_subdirectory(19_Timer)
add_subdirectory(20_RotateTexture)
